Заменил кнопку возврата в Главное меню

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ button:hover {
 
 		<div class="upper">
 			<a href="#mainmenu" title="Главное меню">
-				<img src="Вверх.png" width="40px" height="40px">
+				<img src="Вверх(2).png" width="40px" height="40px">
 			</a>
 		</div>
 
